fix homepage text and spacing

--- a/ui/static/css/tailwind.css
+++ b/ui/static/css/tailwind.css
@@ -604,6 +604,9 @@
   .h-20 {
     height: calc(var(--spacing) * 20);
   }
+  .h-24 {
+    height: calc(var(--spacing) * 24);
+  }
   .h-screen {
     height: 100vh;
   }
